--- a/cetacean_sim/.classpath
+++ b/cetacean_sim/.classpath
@@ -2,5 +2,12 @@
 <classpath>
 	<classpathentry kind="src" path="src"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/jdk1.8.0_101"/>
+	<classpathentry kind="lib" path="src/jars/fxyz.jar"/>
+	<classpathentry kind="lib" path="src/jars/commons-math3-3.6.1.jar" sourcepath="src/jars/commons-math3-3.6.1-sources.jar">
+		<attributes>
+			<attribute name="javadoc_location" value="jar:file:/C:/Users/jamie/cetaceanSimGit/cetacean_sim/src/jars/commons-math3-3.6.1-javadoc.jar!/"/>
+		</attributes>
+	</classpathentry>
+	<classpathentry kind="lib" path="src/jars/jts-1.14.jar" sourcepath="src/jars/jts-1.14-sources.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
