--- a/cetacean_sim/.classpath
+++ b/cetacean_sim/.classpath
@@ -11,5 +11,7 @@
 	<classpathentry kind="lib" path="src/jars/jts-1.14.jar" sourcepath="src/jars/jts-1.14-sources.jar"/>
 	<classpathentry kind="lib" path="src/jars/edu-mines-jtk-1.0.0.jar"/>
 	<classpathentry kind="lib" path="src/jars/controlsfx-8.40.11.jar"/>
+	<classpathentry kind="lib" path="src/jars/fontawesomefx-8.9.jar"/>
+	<classpathentry kind="lib" path="src/jars/fontawesomefx-materialicons-2.1-2.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
