--- a/cetacean_sim/.classpath
+++ b/cetacean_sim/.classpath
@@ -14,5 +14,6 @@
 	<classpathentry kind="lib" path="src/jars/fontawesomefx-materialicons-2.1-2.jar"/>
 	<classpathentry kind="lib" path="src/jars/flanagan.jar"/>
 	<classpathentry kind="lib" path="src/jars/fxyz.jar"/>
+	<classpathentry kind="lib" path="src/jars/matfilerw-master-3.1.0.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
