--- a/cetacean_sim/.classpath
+++ b/cetacean_sim/.classpath
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <classpath>
 	<classpathentry kind="src" path="src"/>
-	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/jdk1.8.0_191">
+	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/Java8_Corretto">
 		<attributes>
 			<attribute name="module" value="true"/>
 		</attributes>
@@ -13,5 +13,6 @@
 	<classpathentry kind="lib" path="src/jars/fxyz.jar"/>
 	<classpathentry kind="lib" path="src/jars/matfilerw-master-3.1.0.jar"/>
 	<classpathentry kind="lib" path="jars/Jama-1.0.2.jar"/>
+	<classpathentry kind="lib" path="src/jars/matfilerw-3.2.0.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
